--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-Eu Eduardo F. Não sou o único responsável pelo desenvolvimento dos códigos deste repositório.
+Eu Eduardo D. Florentino Não sou o único responsável pelo desenvolvimento dos códigos deste repositório.
