--- a/readme
+++ b/readme
@@ -1,1 +1,8 @@
 Eu Eduardo D. Florentino Não sou o único responsável pelo desenvolvimento dos códigos deste repositório.
+
+
+Temos modelos de ambiente com presa/predador/vegetação
+
+Espalho de contágio
+
+movimentação de particulas de gás dentro de uma caixa fechada.
